RESOLVED FIXED176870
[GTK] Fails to build because 'Float32Array' has not been declared in AudioContext.h
https://bugs.webkit.org/show_bug.cgi?id=176870
Summary [GTK] Fails to build because 'Float32Array' has not been declared in AudioCon...
Carlos Alberto Lopez Perez
Reported 2017-09-13 12:00:03 PDT
I got this build error trying to build WebKitGTK+ 2.18.0 with Yocto/OE: make[2]: *** [Source/WebCore/CMakeFiles/WebCoreDerivedSources.dir/__/__/DerivedSources/WebCore/JSAudioParam.cpp.o] Error 1 In file included from /home/igalia/clopez/yocto/tmp/work/cortexa9t2hf-neon-mx6qdl-poky-linux-gnueabi/webkitgtk/2.18.0-r0/webkitgtk-2.18.0/Source/WebCore/Modules/webaudio/AudioParam.h:31:0, from /home/igalia/clopez/yocto/tmp/work/cortexa9t2hf-neon-mx6qdl-poky-linux-gnueabi/webkitgtk/2.18.0-r0/build/DerivedSources/WebCore/JSAudioParam.h:25, from /home/igalia/clopez/yocto/tmp/work/cortexa9t2hf-neon-mx6qdl-poky-linux-gnueabi/webkitgtk/2.18.0-r0/build/DerivedSources/WebCore/JSDelayNode.cpp:27: /home/igalia/clopez/yocto/tmp/work/cortexa9t2hf-neon-mx6qdl-poky-linux-gnueabi/webkitgtk/2.18.0-r0/webkitgtk-2.18.0/Source/WebCore/Modules/webaudio/AudioContext.h:141:55: error: 'Float32Array' has not been declared ExceptionOr<Ref<PeriodicWave>> createPeriodicWave(Float32Array& real, Float32Array& imaginary);
Attachments
Patch (1.28 KB, patch)
2017-09-13 12:07 PDT, Carlos Alberto Lopez Perez
no flags
Carlos Alberto Lopez Perez
Comment 1 2017-09-13 12:07:29 PDT
WebKit Commit Bot
Comment 2 2017-09-13 13:17:39 PDT
Comment on attachment 320670 [details] Patch Clearing flags on attachment: 320670 Committed r221989: <http://trac.webkit.org/changeset/221989>
WebKit Commit Bot
Comment 3 2017-09-13 13:17:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.